# gis-polygons

./: CMakeLists.txt  CoordinatesDataModel.cpp  CoordinatesDataModel.h  OsmMap.qml  PolygonEdge.qml  PolygonVertex.qml  README.md  main.cpp  main.qml  qml.qrc
